fixed horizontal scroll

--- a/styles/all.css
+++ b/styles/all.css
@@ -48,7 +48,7 @@ nav a{
 }
 
 section{
-  width: 65%;
+  width: 60%;
   position: relative;
   left: 28em;
 }
